--- a/resources/assets/sass/_buttons.sass
+++ b/resources/assets/sass/_buttons.sass
@@ -112,10 +112,11 @@ button
       background-color: #a8a8a8
   &_more
     font-size: 24px
+    line-height: 24px
     font-weight: 700
     color: #4c68a5
     border: 1px solid #4c68a5
-    padding: 15px 20px
+    padding: 14px 20px 22px 20px
     transition: background-color .3s ease
     & > *
       display: inline-block
@@ -125,7 +126,7 @@ button
     //  transition: color .3s ease
     .count
       //color: #00ad5d
-      margin: 0 20px 0 10px
+      margin: 0 0 0 10px
     &:hover
       background-color: #f4f4f4
       //.text
