--- a/resources/assets/sass/partials/_contacts.sass
+++ b/resources/assets/sass/partials/_contacts.sass
@@ -100,3 +100,9 @@
     +col(24)
     & > img
       max-width: 100%
+
+  .btn-callback
+    align-self: flex-end
+    +media-sm(down)
+      +col(20)
+      justify-content: center
