--- a/resources/assets/sass/partials/_checkout.sass
+++ b/resources/assets/sass/partials/_checkout.sass
@@ -69,7 +69,7 @@
     text-align: center
     line-height: 42px
     &.active
-      background-color: #fcd82f
+      background-color: #4c68a5
       color: #ffffff
   &__name
     font-size: 14px
@@ -278,7 +278,7 @@
   &__title
     font-size: 18px
     font-weight: 700
-    color: #43b562
+    color: #4c68a5
   &__text
     margin-top: 7px
     font-size: 12px
@@ -292,7 +292,7 @@
   &__title
     font-size: 18px
     font-weight: 700
-    color: #43b562
+    color: #4c68a5
   &__text
     margin-top: 7px
     font-size: 12px
@@ -315,7 +315,7 @@
     display: flex
   & > input
     &:checked + span
-      border: 2px solid #36b057
+      border: 2px solid #4c68a5
       & > i
         transform: scale(1)
     &:checked + span + span
@@ -359,9 +359,9 @@
   &__price
     padding: 7px 10px
     width: 90px
-    background-color: #fcd82f
+    background-color: #4c68a5
     font-size: 14px
-    color: #000000
+    color: #fff
     display: block
     text-align: center
     position: absolute
@@ -413,7 +413,7 @@
     & > span
       +media-xs()
         display: block
-      color: #36b057
+      color: #4c68a5
   &__text
     margin-left: auto
     margin-right: auto
