--- a/resources/assets/sass/partials/_delivery.sass
+++ b/resources/assets/sass/partials/_delivery.sass
@@ -17,6 +17,7 @@
     & > img
       max-width: 100%
   &__courier
+    font-family: "Open Sans", sans-serif
     margin-top: 30px
     +media-sm(down)
       +col(24)
@@ -29,6 +30,7 @@
         +media-lg(up)
           margin-top: 14px
   &__text
+    font-family: "Open Sans", sans-serif
     margin-top: 30px
     line-height: 24px
     font-size: 14px
