--- a/resources/assets/sass/_buttons.sass
+++ b/resources/assets/sass/_buttons.sass
@@ -149,7 +149,7 @@ button
     font-size: 16px
     color: #000000
     border: 1px solid #B0C0CE
-    padding: 10px
+    padding: 7px 10px
     &:hover, &.active
       background-color: #e8e8e8
   &_look
