--- a/resources/assets/sass/partials/_header.sass
+++ b/resources/assets/sass/partials/_header.sass
@@ -125,7 +125,7 @@ header
     +hidden-lg(up)
     +col(3)
   &__logo
-    min-width: 130px
+    min-width: 90px
     +col(8)
     +col-sm(6)
     +col-lg(4)
@@ -208,6 +208,8 @@ header
     +col-xl(3)
     display: flex
     +align(between, center)
+    +media-sm()
+      margin-right: 0
     & > a
       text-decoration: none
       color: #FFFFFF
