--- a/resources/assets/sass/partials/_header.sass
+++ b/resources/assets/sass/partials/_header.sass
@@ -171,7 +171,7 @@ header
     +col-lg(4)
     +col-md(6)
     +col-sm(8)
-    +hidden-xs()
+
     //& > div
     //  margin: 5px 0 10px
     +media-sm(down)
@@ -201,6 +201,7 @@ header
       +hidden-xl(down)
     i
       +hidden-xs()
+    +hidden-xs()
   &__basket
     +col(11)
     +col-sm(7)
@@ -226,6 +227,9 @@ header
     .basket
       width: 44px
       height: 46px
+      +media-xs()
+        width: 24px
+        height: 26px
 
     .count
       text-align: center
@@ -241,6 +245,8 @@ header
       z-index: 1
       top: -1px
       right: 0
+      +media-xs()
+        right: -5px
       &_wishlist
         display: none
         &.active
