--- a/resources/assets/sass/grid/mixins/_media.sass
+++ b/resources/assets/sass/grid/mixins/_media.sass
@@ -44,5 +44,5 @@
     @media screen and (min-width: $xs)
       @content
   @else if ($direction == down or $direction == only)
-    @media screen and (max-width: $xs - 1)
+    @media screen and (max-width: $sm - 1)
       @content
