--- a/resources/assets/sass/partials/_main.sass
+++ b/resources/assets/sass/partials/_main.sass
@@ -46,15 +46,15 @@
     width: 12px
     height: 12px
     border: 2px solid #C6C6C6
-    margin: 5px 9px
+    margin: 5px 11px
     cursor: pointer
     transition: all .2s ease
     //background-color .2s ease, margin .2s ease, width .2s ease, height .2s ease
     &.active
-      //width: 23px
-      //height: 23px
-      //margin: 0 4px
-      //border-width: 7px
+      width: 22px
+      height: 22px
+      margin: 0 6px
+      border-width: 5px
       border-color: #3F67AC
 
 // Colored background
