--- a/resources/assets/sass/partials/_product.sass
+++ b/resources/assets/sass/partials/_product.sass
@@ -205,7 +205,7 @@
       order: 7
       margin-top: 30px
   &__description
-    margin-top: 20px
+    //margin-top: 20px
     margin-left: -24px
     border-bottom: 1px solid #dddddd
     +media-md(down)
@@ -380,7 +380,7 @@
       display: block
 .description-scroll
   height: 225px
-  padding: 0 0 40px 24px
+  padding: 0 0 24px 24px
   border-left: 1px solid #dddddd
   ::-webkit-scrollbar
     width: 14px
@@ -1057,6 +1057,7 @@
   margin-bottom:  30px
   +media-md(down)
     text-align: center
+
 .product-details-carousel
   +hidden-sm(up)
   position: relative
@@ -1066,6 +1067,7 @@
   +align(between)
   &__wrap
     min-width: calc(100% - 2*47px)
+    position: relative
     overflow: hidden
     +media-sm(down)
       width: 100%
@@ -1076,24 +1078,31 @@
   &:hover
     overflow: visible
     z-index: 2
+  &__link
+    display: block
+    img
+      max-width: 100%
+      width: 100%
+      height: auto
+
   & > .carousel-pagination
     position: static
     margin: 12px 0
-    & > .carousel-pagination__page
-      border-color: #bebebe
-      position: relative
-      &:after
-        content: ""
-        position: absolute
-        width: 13px
-        height: 13px
-        border-radius: 100%
-        transition: width .2s ease, height .2s ease
-      &.active
-        border-color: #ffffff
-        &:after
-          top: -8px
-          left: -8px
-          width: 21px
-          height: 21px
-          border: 2px solid #bebebe
+    //& > .carousel-pagination__page
+    //  border-color: #bebebe
+    //  position: relative
+    //  &:after
+    //    content: ""
+    //    position: absolute
+    //    width: 13px
+    //    height: 13px
+    //    border-radius: 100%
+    //    transition: width .2s ease, height .2s ease
+    //  &.active
+    //    border-color: #ffffff
+    //    &:after
+    //      top: -8px
+    //      left: -8px
+    //      width: 21px
+    //      height: 21px
+    //      border: 2px solid #bebebe
