--- a/resources/assets/sass/partials/_product.sass
+++ b/resources/assets/sass/partials/_product.sass
@@ -558,10 +558,10 @@
     width: calc(100% + 1px)
     z-index: 2
     padding: 0 24px 0 24px
-    +media-xs()
-      padding-left: 60px
-    font-size: 13px
-    color: #878787
+    //+media-xs()
+    //  padding-left: 60px
+    font-size: 14px
+    color: #272727
     max-height: 0
     overflow: hidden
     transition: padding .3s ease, max-height .3s ease
