--- a/resources/assets/sass/partials/_checkout.sass
+++ b/resources/assets/sass/partials/_checkout.sass
@@ -309,6 +309,8 @@
   margin-top: 30px
   +media-md(up)
     +col(8)
+  +media-sm(down)
+    +col(12)
   +media-lg(up)
     margin-bottom: 20px
   +media-xl()
@@ -324,10 +326,12 @@
     display: none
   &__description
     display: block
-    padding: 20px 20px 50px
+    padding: 20px
     background-color: #fff
     transition: box-shadow .3s ease
     position: relative
+    +media-xs()
+      padding: 12px
   &__title
     font-weight: 700
     font-size: 16px
@@ -338,6 +342,12 @@
     font-size: 14px
     color: #7b7b7b
     display: block
+  &__ps
+    width:  100%
+    margin-top: 10px
+    font-size: 16px
+    color: #7b7b7b
+
   &__fake-radio
     margin-right: 10px
     margin-bottom: 10px
