--- a/resources/assets/sass/partials/_main.sass
+++ b/resources/assets/sass/partials/_main.sass
@@ -446,14 +446,16 @@
   margin-bottom: 85px
 //background: url("/img/callb-min.jpg") no-repeat  #edf5fc
 .main-callback__image
-  +col(14, no)
-  background: url("/img/callb-min.jpg") no-repeat #edf5fc
+  +col(12, no)
+  background: #f6f7f7 url("/img/callb2.jpg") no-repeat right top
   background-size: cover
-  +hidden-sm(down)
+  +hidden-md(down)
 
 .main-callback__form
-  +col(10, no)
-  +media-sm(down)
+  padding: 0 7.2%
+  background-color: #f6f7f7
+  +col(12, no)
+  +media-md(down)
     +col(24, no)
 
 .main-trust
