--- a/resources/assets/sass/_forms.sass
+++ b/resources/assets/sass/_forms.sass
@@ -142,37 +142,39 @@
 .form-main-callb
   display: flex
   flex-direction: column
+  align-items: flex-start
   width: 100%
-  padding-left: 30px
-  margin-top: 80px
-  margin-bottom: 100px
-  color: #292929
+  //padding-left: 30px
+  margin-top: 30px
+  margin-bottom: 35px
+  color: #222222
   +media-sm(down)
     padding-left: 0
   &_title
-    margin-bottom: 80px
-    font-size: 36px
+    margin-bottom: 22px
+    font-size: 24px
     font-weight: 700
   &_text
-    max-width: 340px
-    margin-bottom: 80px
-    font-family: "Open Sans" ,sans-serif
-    font-size: 24px
+    margin-bottom: 35px
+    //font-family: "Open Sans" ,sans-serif
+    font-size: 18px
     font-weight: 400
 
 
 .form-main-callb_line
   position: relative
+  width: 100%
+  margin-bottom: 26px
   &--hidden
     display: none
 
-.form-main-callb_line input
+.form-main-callb_line .input
   width: 100%
   font-size: 17px
   color: #484848
   padding: 13px 60px 13px 15px
   border: 1px solid #e2f1ff
-  box-shadow: 0px 5px 26px 1px rgba(0, 0, 0, 0.24)
+  //box-shadow: 0px 5px 26px 1px rgba(0, 0, 0, 0.24)
   &:focus, &:active
     border: 1px solid #3a68a9
     color: #000
@@ -181,14 +183,7 @@
 
 //
 .form-main-callb__btn
-  position: absolute
-  top: 0
-  right: 0
-  display: inline-block
-  padding: 0
-  width: 60px
-  height: 48px
-  background-color: #0069ac
-  &:hover, &:focus
-    background-color: #2d4f7e
+  font-size: 16px
+  font-weight: 400
+  padding: 12px 45px
 
