--- a/resources/assets/sass/_buttons.sass
+++ b/resources/assets/sass/_buttons.sass
@@ -322,7 +322,8 @@ button
     width: 100%
     text-transform: uppercase
     &:hover, &:active, &.active
-      background-color: #4c68a5
+      background-color: #2d4f7e
+      border-color: #2d4f7e
       color: #fff
 
 
