--- a/resources/assets/sass/_forms.sass
+++ b/resources/assets/sass/_forms.sass
@@ -185,5 +185,8 @@
 .form-main-callb__btn
   font-size: 16px
   font-weight: 400
+  line-height: 20px
+  width: auto
+  text-transform: none
   padding: 12px 45px
 
