--- a/resources/assets/sass/partials/_product.sass
+++ b/resources/assets/sass/partials/_product.sass
@@ -720,6 +720,10 @@
     +grid-in()
     &:not(.js-dragged)
       transition: transform .3s ease
+    .wishlist
+      top: 2px
+      right: 2px
+
   &:hover
     overflow: visible
     z-index: 2
