--- a/resources/assets/sass/_buttons.sass
+++ b/resources/assets/sass/_buttons.sass
@@ -321,7 +321,11 @@ button
     padding: 16px 2px
     width: 100%
     text-transform: uppercase
-    &:hover, &:active, &.active
+    &:hover
+      background-color: #0069ac
+      border-color: #0069ac
+      color: #fff
+    &:active, &.active
       background-color: #2d4f7e
       border-color: #2d4f7e
       color: #fff
