--- a/resources/assets/sass/partials/_header.sass
+++ b/resources/assets/sass/partials/_header.sass
@@ -549,7 +549,7 @@ header
       &:hover, &:focus
         font-weight: 700
         color: #3a69a8
-    & > li > button, & > .mobile-sidebar__title
+    & > li > button, & > .mobile-sidebar__title,& .mobile-sidebar__title2-back
       +hidden-lg(up)
 
 
