--- a/resources/assets/sass/partials/_sidebar.sass
+++ b/resources/assets/sass/partials/_sidebar.sass
@@ -562,7 +562,15 @@ body
     padding-right: 0
     & > .sidebar-filter__title
       font-size: 18px
-
+  .nav-catalog__itm-title
+     font-size: 16px
+     line-height: 24px
+     font-weight: 500
+     padding: 5px 12px
+  .nav-catalog__dropdown a
+    font-size: 16px
+    line-height: 20px
+    padding: 5px 12px
 
 // Geo city change
 .sidebar-geo
